// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View snapshots: AddGroupView renders correctly 1`] = `
<div
  className="w-1/4 min-w-[25%] h-max px-4 mr-2 flex-col items-start bg-blue-500 border-radius border-none rounded-xl p-2 mb-4 text-start"
>
  <div
    className="font-sans font-bold flex place-content-between py-4"
  >
    name
  </div>
  <div
    className="overflow-y-auto max-h-[78vh] pr-2"
  />
  <button
    className="text-white border-none outline-none m-2 hover: text-gray-100
     flex"
    onClick={[Function]}
  >
    + Add another list
  </button>
</div>
`;

exports[`View snapshots: BoardView renders correctly 1`] = `
<div
  className="flex-col bg-blue-400 p-4 font-sans w-full h-full border-none p-2 mb-4 text-start"
>
  <div
    className="font-sans font-bold my-2 w-max text-white text-2xl"
  >
    Welcome board
  </div>
  <div
    className="flex max-w-full overflow-x-auto overflow-y-hidden h-[95%]"
  >
    <div
      className="w-1/4 min-w-[25%] h-max px-4 mr-2 flex-col items-start bg-blue-500 border-radius border-none rounded-xl p-2 mb-4 text-start"
    >
      <div
        className="overflow-y-auto max-h-[78vh] pr-2"
      />
      <button
        className="text-white border-none outline-none m-2 hover: text-gray-100
     flex"
        onClick={[Function]}
      >
        + Add another list
      </button>
    </div>
  </div>
</div>
`;

exports[`View snapshots: CardView renders correctly 1`] = `
<div
  className="drop-shadow-md bg-white border-radius border-none rounded-xl p-2 mb-4 text-start"
>
  <button
    className="text-gray-400 border-none outline-none m-2 hover: text-gray-600
     opacity-0 flex ml-auto hover:opacity-100 absolute top-0 right-0"
    onClick={[Function]}
  >
    <img
      alt="Draw icons created by Gregor Cresnar - Flaticon"
      height={24}
      src="src/assets/icons/edit.png"
      width={24}
    />
  </button>
  <textarea
    className="w-full outline-none border-none m-auto"
    onChange={[Function]}
    placeholder="Add new card description"
    value=""
  />
</div>
`;

exports[`View snapshots: GroupView renders correctly 1`] = `
<div
  className="w-1/4 min-w-[25%] h-max px-4 mr-2 flex-col items-start bg-gray-100 border-radius border-none rounded-xl p-2 mb-4 text-start"
>
  <div
    className="flex justify-between"
  >
    <input
      className="w-11/12 w-full outline-none border-none m-auto"
      onChange={[Function]}
      placeholder="Add new list title"
      value="name"
    />
    <button
      className="text-gray-400 border-none outline-none m-2 hover: text-gray-600"
      onClick={[Function]}
    >
      <img
        alt="View more icons created by Any Icon - Flaticon"
        height={24}
        src="src/assets/icons/more.png"
        width={24}
      />
    </button>
  </div>
  <div
    className="overflow-y-auto max-h-[78vh] pr-2"
  />
  <button
    className="text-gray-400 border-none outline-none m-2 hover: text-gray-600
     flex"
    onClick={[Function]}
  >
    + Add another card
  </button>
</div>
`;
